[package]
name = "quantities"
version = "0.4.2"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Unit-safe computations with quantities."
readme = "README.md"
homepage = "https://github.com/mamrhein/quantities.rs"
repository = "https://github.com/mamrhein/quantities.rs"
documentation = "https://docs.rs/quantities/"
license-file = "LICENSE.TXT"
keywords = ["quantity", "unit", "unit-safe", "measure", "arithmetics"]
categories = ["data-structures", "mathematics"]

[dependencies]
qty-macros = { version = "0.4.0", path = "qty-macros" }
fpdec = { version = "0.4.0", optional = true }

[dev-dependencies]
trybuild = "1"

[features]
default = ["std"]
std = []
mass = []
length = []
duration = []
datavolume = []
area = ["length"]
volume = ["area"]
speed = ["length", "duration"]
acceleration = ["speed", "duration"]
# used for rustdoc only
doc = ["mass", "length", "duration", "datavolume", "area", "volume", "speed",
    "acceleration"]

[workspace]
members = [".", "qty-macros"]

[package.metadata.docs.rs]
features = ["doc"]
