[package]
name = "quantities"
version = "0.11.1"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Unit-safe computations with quantities."
readme = "README.md"
homepage = "https://github.com/mamrhein/quantities.rs"
repository = "https://github.com/mamrhein/quantities.rs"
documentation = "https://docs.rs/quantities/"
license-file = "LICENSE.TXT"
keywords = ["quantity", "unit", "unit-safe", "measure", "arithmetics"]
categories = ["data-structures", "mathematics"]

[dependencies]
qty-macros = { version = "0.11.0", path = "qty-macros" }
fpdec = { version = "0.6.0", features = ["serde-as-str"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
trybuild = "1"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
mass = []
length = []
duration = []
area = ["length"]
volume = ["area"]
speed = ["length", "duration"]
acceleration = ["speed", "duration"]
force = ["mass", "acceleration"]
energy = ["force", "length"]
power = ["energy", "duration"]
frequency = ["duration"]
datavolume = []
datathroughput = ["datavolume", "duration"]
temperature = []
# used for rustdoc only
doc = ["mass", "length", "duration", "area", "volume", "speed",
    "acceleration", "force", "energy", "power", "frequency", "datavolume",
    "datathroughput", "temperature"]

[workspace]
members = [".", "qty-macros", "astronimical_quantities"]

[package.metadata.docs.rs]
features = ["doc"]
