[package]
name = "quantities"
version = "0.14.1"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Unit-safe computations with quantities."
readme = "README.md"
homepage = "https://github.com/mamrhein/quantities.rs"
repository = "https://github.com/mamrhein/quantities.rs"
documentation = "https://docs.rs/quantities/"
license-file = "LICENSE.TXT"
keywords = ["quantity", "unit", "unit-safe", "measure", "arithmetics"]
categories = ["data-structures", "mathematics"]
rust-version = "1.80.1"

[dependencies]
qty-macros = { version = "*", path = "qty-macros" }
fpdec = { version = "0.13", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
trybuild = "1"
serde = "1"
serde_json = { version = "1.0" }

[features]
default = ["std"]
std = []
serde = ["dep:serde", "fpdec?/serde-as-str"]
f32 = []
f64 = []
mass = []
length = []
duration = []
area = ["length"]
volume = ["area"]
speed = ["length", "duration"]
acceleration = ["speed", "duration"]
force = ["mass", "acceleration"]
energy = ["force", "length"]
power = ["energy", "duration"]
frequency = ["duration"]
datavolume = []
datathroughput = ["datavolume", "duration"]
temperature = []
# used for rustdoc only
doc = [
    "mass",
    "length",
    "duration",
    "area",
    "volume",
    "speed",
    "acceleration",
    "force",
    "energy",
    "power",
    "frequency",
    "datavolume",
    "datathroughput",
    "temperature",
]

[workspace]
members = [".", "qty-macros", "astronimical_quantities"]

[package.metadata.docs.rs]
features = ["doc"]
