[package]
name = "astronomical-quantities"
version = "0.14.4"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Unit-safe computations with astronomical quantities."
readme = "README.md"
homepage = "https://github.com/mamrhein/quantities.rs"
repository = "https://github.com/mamrhein/quantities.rs"
documentation = "https://docs.rs/quantities/"
license-file = "../LICENSE.TXT"
keywords = ["quantity", "unit", "unit-safe", "measure", "astronomical"]
categories = ["data-structures", "mathematics", "science"]

[dependencies]
quantities = { version = "0.14.3", path = ".." }

[dev-dependencies]
trybuild = "1"

[features]
default = ["std"]
std = []
serde = ["quantities/serde"]
