[package]
name = "qty-macros"
version = "0.13.1"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Macros supporting the implementation of quantities."
readme = "README.md"
homepage = "https://github.com/mamrhein/quantities.rs"
repository = "https://github.com/mamrhein/quantities.rs"
documentation = "https://docs.rs/quantities/"
license-file = "../LICENSE.TXT"
keywords = ["quantity", "unit", "unit-safe", "measure", "arithmetics"]
categories = ["data-structures", "mathematics"]

[dependencies]
convert_case = "0.6"
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = {version="2", features=["full"]}

[dev-dependencies]
trybuild = "1"

[lib]
proc-macro = true
